# pinduoduo_bot_backend

./: .gitignore  .gitlab-ci.yml
api/: .env  alembic.ini  docker-compose.yaml  pyproject.toml  setup.cfg
api/alembic/: env.py
api/alembic/versions/: 60f1d9725e31_initial.py
api/src/core/: config.py
api/src/database/: dependencies.py  models.py  session.py
backend/: .env  CHANGELOG.md  README.md  docker-compose.local.yaml  docker-compose.yaml  main.py  pyproject.toml  setup.cfg  start.sh
backend/alembic/: env.py
backend/alembic/versions/: 08be2b3c47b9_исправления_в_user_добавлено_referral_.py  10d0409b776c_добавлена_таблица_лимитов.py  2aba664e93d3_изменение_таблицы_лимитов_сокращено_кол_.py  2c83c258aca5_убрана_лишняя_связь_user_reviews.py  5a0740b3c451_добавлено_поле_reviews_goods_url.py  5f7424f44f88_добавлена_таблица_отзывов_товар_ссылка_.py  8b0411711a52_убрана_уникальность_поля_joint_purchase_.py  992fc7037940_создана_таблица_cargo.py  c4b5b97d5041_тип_goods_id_изменён_на_bigint.py  cb95394e547a_добавлено_поле_available_requests_count.py  d741067358c5_добавлена_связь_one_to_many_user_joint_.py  ede678fe4a48_добавлена_таблица_рефералок.py  (+1 more)
backend/src/: main.py  server.py
tg_bot/: docker-compose.local.yaml  docker-compose.yaml  pyproject.toml
tg_bot/docker/tg_bot/: Dockerfile
tg_bot/src/: main.py
tg_bot/src/dudu_bot/: keyboards.py  settings.py  texts.py  utils.py
tg_bot/src/dudu_bot/filters/: __init__.py  filters.py
tg_bot/src/dudu_bot/handlers/: __init__.py  client_notify.py  dudu_cargo.py  joint_purchase_request.py  moderation.py  reviews.py  sign_up.py  start.py
tg_bot/src/dudu_bot/states/: states.py
(+50 files in other folders)
