[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["rtokashev <azerot12123@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.97.0"
SQLAlchemy = "^2.0.16"
asyncpg = "^0.27.0"
alembic = "^1.11.1"

[tool.poetry.dev-dependencies]
wemake-python-styleguide = "^0.18.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
